AzureSecBootcampNetworkLab1/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "alias": {
      "type": "string",
      "metadata": {
        "description": "Enter Your Microsoft Alias"
      }
    }
  },

  "variables": {

    "vNet1": {
      "name": "[Concat(parameters('alias'),'-hub-vnet1')]",
      "addressSpacePrefix": "10.10.0.0/16",
      "subnet1Name": "AzureFirewallSubnet",
      "subnet1Prefix": "10.10.1.0/24",
      "subnet2Name": "DMZ",
      "subnet2Prefix": "10.10.2.0/24",
      "subnet3Name": "Management",
      "subnet3Prefix": "10.10.3.0/24",
      "gatewaySubnetPrefix": "10.10.4.0/27",
      "gatewayName": "[concat(parameters('alias'),'-vnet1-GW')]",
      "gatewayPublicIPName": "[concat(parameters('alias'),'-vnet1-GWIP')]",
      "asn": 65031,
      "location": "East US"
    },

    "vNet2": {
      "name": "[Concat(parameters('alias'),'-spoke-vnet2')]",
      "env": "DR",
      "addressSpacePrefix": "10.20.0.0/16",
      "subnet1Name": "DMZ",
      "subnet1Prefix": "10.20.1.0/24",
      "subnet2Name": "Web",
      "subnet2Prefix": "10.20.2.0/24",
      "subnet3Name": "App",
      "subnet3Prefix": "10.20.3.0/24",
      "subnet4Name": "Data",
      "subnet4Prefix": "10.20.4.0/24",
      "subnet5Name": "Identity",
      "subnet5Prefix": "10.20.5.0/24",
      "subnet6Name": "Management",
      "subnet6Prefix": "10.20.6.0/24",
      "gatewaySubnetPrefix": "10.20.7.0/27",
      "gatewayName": "[concat(parameters('alias'),'-vnet2-GW')]",
      "gatewayPublicIPName": "[concat(parameters('alias'),'-vnet2-GWIP')]",
      "asn": 65032,
      "location": "East US"
    },

    "vNet3": {
      "name": "[Concat(parameters('alias'),'-spoke-vnet3')]",
      "env": "TEST",
      "addressSpacePrefix": "10.30.0.0/16",
      "subnet1Name": "DMZ",
      "subnet1Prefix": "10.30.1.0/24",
      "subnet2Name": "Web",
      "subnet2Prefix": "10.30.2.0/24",
      "subnet3Name": "App",
      "subnet3Prefix": "10.30.3.0/24",
      "subnet4Name": "Data",
      "subnet4Prefix": "10.30.4.0/24",
      "subnet5Name": "Identity",
      "subnet5Prefix": "10.30.5.0/24",
      "subnet6Name": "Management",
      "subnet6Prefix": "10.30.6.0/24",
      "gatewaySubnetPrefix": "10.30.7.0/27",
      "gatewayName": "[concat(parameters('alias'),'-vnet3-GW')]",
      "gatewayPublicIPName": "[concat(parameters('alias'),'-vnet3-GWIP')]",
      "asn": 65033,
      "location": "East US"
    },
    "azfwRouteTableName": "[Concat(parameters('alias'),'-azroutetable')]",
    "nextHopIP": "10.10.1.4",

    "vnet1rg": "[concat(parameters('alias'),'-network-rg')]",

    "vnet1Ref": "[resourceId(variables('vNet1rg'),'Microsoft.Network/virtualNetworks',variables('vNet1').name)]",
    "gateway1SubnetRef": "[concat(variables('vnet1Ref'),'/subnets/','GatewaySubnet')]",
    "vnet2Ref": "[resourceId('Microsoft.Network/virtualNetworks',variables('vNet2').name)]",
    "gateway2SubnetRef": "[concat(variables('vnet2Ref'),'/subnets/','GatewaySubnet')]",
    "gatewaySku": "Standard",
    "sharedkey": "abc123",
    "jumpboxrg": "[concat(parameters('alias'),'-jumpbox-rg')]",
    "clientRootCertData": "MIIC5zCCAc+gAwIBAgIQY8vUyqs7xqdF2n6dIIXoMDANBgkqhkiG9w0BAQsFADAWMRQwEgYDVQQDDAtQMlNSb290Q2VydDAeFw0xNzA2MTExNjI3MjhaFw0xODA2MTExNjQ3MjhaMBYxFDASBgNVBAMMC1AyU1Jvb3RDZXJ0MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEApYsMmCcc1LXOTttt78wPjLYdktroNzwtT0sggyoCobaDcnHvx0JTtO8qPaKL9lnZOFognvZh43AdI+D/6v2x2jQ6NvzQOEQeH/CaAGFqOq6g9182irk9P/AxMoBz11Sq3xw/Ftjt4ltOzjdPOgf7+gzjDFrKVTAwVwJLjo3M6oKo4UTgamhhmzcj7nsTdCKhJtzR6qd+bUaMrupy0JpY9HpfcUKfRsoMJyrlznMYnEPYd59mBpvvFeECH0mhlyRTFHIVt [...]
    "jumpboxurl": "https://msreadylabcontent.blob.core.windows.net/task2/jumpbox.json"
  },
  "resources": [
    {
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('azfwRouteTableName')]",
      "apiVersion": "2018-02-01",
      "location": "[variables('vNet1').location]",
      "properties": {
        "disableBgpRoutePropagation": false,
        "routes": [
          {
            "name": "AzfwDefaultRoute",
            "properties": {
              "addressPrefix": "0.0.0.0/0",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "[variables('nextHopIP')]"
            }
          }
        ]
      }
    },




    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vNet1').subnet2name,'NSG01')]",
      "location": "[variables('vNet1').location]",
      "tags": {
        "Environment": "Production",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
          {
            "name": "Allow-webserver-80-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-webserver-443-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vNet1').subnet3name,'NSG01')]",
      "location": "[variables('vNet1').location]",
      "tags": {
        "Environment": "Production",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
          {
            "name": "Allow-jumpbox-3389-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "10.10.3.4/32",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    },

    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('vNet1').name]",
      "location": "[variables('vNet1').location]",
      "comments": "This is the first vNet",
      "dependsOn": [

        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vNet1').subnet2name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vNet1').subnet3name,'NSG01'))]"


      ],
      "tags": {
        "Environment": "Production",
        "Owner": "Network Team"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vNet1').addressSpacePrefix]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('vNet1').subnet1Name]",
            "properties": {
              "addressPrefix": "[variables('vNet1').subnet1Prefix]"

            }

          },
          {
            "name": "[variables('vNet1').subnet2Name]",
            "properties": {
              "addressPrefix": "[variables('vNet1').subnet2Prefix]"

            }


          },
          {
            "name": "[variables('vNet1').subnet3Name]",
            "properties": {
              "addressPrefix": "[variables('vNet1').subnet3Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vNet1').subnet3name,'NSG01'))]"
              }
            }
          },

          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[variables('vNet1').gatewaySubnetPrefix]"
            }
          }
        ]
      }
    },




    {

      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet1name,'NSG01')]",
      "location": "[variables('vnet2').location]",
      "tags": {
        "Environment": "DR",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet2name,'NSG01')]",
      "location": "[variables('vnet2').location]",
      "tags": {
        "Environment": "DR",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
          {
            "name": "Allow-webserver-80-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-webserver-443-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet3name,'NSG01')]",
      "location": "[variables('vnet2').location]",
      "tags": {
        "Environment": "DR",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [

        ]
      }
    },

    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet4name,'NSG01')]",
      "location": "[variables('vnet2').location]",
      "tags": {
        "Environment": "DR",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet5name,'NSG01')]",
      "location": "[variables('vnet2').location]",
      "tags": {
        "Environment": "DR",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet6name,'NSG01')]",
      "location": "[variables('vnet2').location]",
      "tags": {
        "Environment": "DR",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
          {
            "name": "rdp-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }


        ]


      }
    },





    {
      "apiVersion": "2016-12-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('vnet2').name]",
      "location": "[variables('vnet2').location]",
      "comments": "This is the first vNet",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet1name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet2name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet3name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet4name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet5name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet6name,'NSG01'))]"

      ],
      "tags": {
        "Environment": "DR",
        "Owner": "Network Team"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnet2').addressSpacePrefix]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('vnet2').subnet1Name]",
            "properties": {
              "addressPrefix": "[variables('vnet2').subnet1Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet1name,'NSG01'))]"
              }
            }

          },
          {
            "name": "[variables('vnet2').subnet2Name]",
            "properties": {
              "addressPrefix": "[variables('vnet2').subnet2Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet2name,'NSG01'))]"
              }
            }


          },
          {
            "name": "[variables('vnet2').subnet3Name]",
            "properties": {
              "addressPrefix": "[variables('vnet2').subnet3Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet3name,'NSG01'))]"
              }
            }
          },
          {
            "name": "[variables('vnet2').subnet4Name]",
            "properties": {
              "addressPrefix": "[variables('vnet2').subnet4Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet4name,'NSG01'))]"
              },
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('azfwRouteTableName'))]"
              },
              "serviceEndpoints": [
                {
                  "service": "Microsoft.Storage"
                }
              ]
            }
          },
          {
            "name": "[variables('vnet2').subnet5Name]",
            "properties": {
              "addressPrefix": "[variables('vnet2').subnet5Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet5name,'NSG01'))]"
              }
            }
          },
          {
            "name": "[variables('vnet2').subnet6Name]",
            "properties": {
              "addressPrefix": "[variables('vnet2').subnet6Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet2').env,variables('vnet2').subnet6name,'NSG01'))]"
              }
            }
          },
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[variables('vnet2').gatewaySubnetPrefix]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet1name,'NSG01')]",
      "location": "[variables('vnet3').location]",
      "tags": {
        "Environment": "Dev/Test",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet2name,'NSG01')]",
      "location": "[variables('vnet3').location]",
      "tags": {
        "Environment": "Dev/Test",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
          {
            "name": "Allow-webserver-80-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-webserver-443-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet3name,'NSG01')]",
      "location": "[variables('vnet3').location]",
      "tags": {
        "Environment": "Dev/Test",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
          {
            "name": "Allow-webserver-80-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-webserver-443-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          }
        ]
      }
    },

    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet4name,'NSG01')]",
      "location": "[variables('vnet3').location]",
      "tags": {
        "Environment": "Dev/Test",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet5name,'NSG01')]",
      "location": "[variables('vnet3').location]",
      "tags": {
        "Environment": "Dev/Test",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet6name,'NSG01')]",
      "location": "[variables('vnet3').location]",
      "tags": {
        "Environment": "Dev/Test",
        "Owner": "Network Team"
      },
      "properties": {
        "securityRules": [
          {
            "name": "rdp-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }



        ]
      }
    },




    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('vnet3').name]",
      "location": "[variables('vnet3').location]",
      "comments": "This is the first vNet",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet1name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet2name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet3name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet4name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet5name,'NSG01'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet6name,'NSG01'))]"
      ],
      "tags": {
        "Environment": "Dev/Test",
        "Owner": "Network Team"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnet3').addressSpacePrefix]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('vnet3').subnet1Name]",
            "properties": {
              "addressPrefix": "[variables('vnet3').subnet1Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet1name,'NSG01'))]"
              }
            }

          },
          {
            "name": "[variables('vnet3').subnet2Name]",
            "properties": {
              "addressPrefix": "[variables('vnet3').subnet2Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet2name,'NSG01'))]"
              }
            }


          },
          {
            "name": "[variables('vnet3').subnet3Name]",
            "properties": {
              "addressPrefix": "[variables('vnet3').subnet3Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet3name,'NSG01'))]"
              }
            }
          },
          {
            "name": "[variables('vnet3').subnet4Name]",
            "properties": {
              "addressPrefix": "[variables('vnet3').subnet4Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet4name,'NSG01'))]"
              }
            }
          },
          {
            "name": "[variables('vnet3').subnet5Name]",
            "properties": {
              "addressPrefix": "[variables('vnet3').subnet5Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet5name,'NSG01'))]"
              }
            }
          },
          {
            "name": "[variables('vnet3').subnet6Name]",
            "properties": {
              "addressPrefix": "[variables('vnet3').subnet6Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('alias'),variables('vnet3').env,variables('vnet3').subnet6name,'NSG01'))]"
              }
            }
          },
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[variables('vnet3').gatewaySubnetPrefix]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('vNet1').gatewayPublicIPName]",
      "location": "[variables('vNet1').location]",
      "comments": "This is the public IP for vNet Gateway 1",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "apiVersion": "2016-06-01",
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "name": "[concat(variables('vNet1').name,'/LinkToVNet3')]",
      "location": "[variables('vNet1').location]",
      "dependson": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('vNet3').name)]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('vNet1').name)]"
      ],
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('vNet3').name)]"
        }
      }
    },
    {
      "apiVersion": "2016-06-01",
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "name": "[concat(variables('vNet3').name,'/LinkToVNet1')]",
      "location": "[variables('vNet3').location]",
      "dependson": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('vNet3').name)]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('vNet1').name)]"
      ],
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[variables('vnet1Ref')]"
        }
      }
    },
    {
      "apiVersion": "2016-06-01",
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "name": "[concat(variables('vNet1').name,'/LinkToVNet2')]",
      "location": "[variables('vNet2').location]",
      "dependson": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('vNet2').name)]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('vNet1').name)]"
      ],
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('vNet2').name)]"
        }
      }
    },
    {
      "apiVersion": "2016-06-01",
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "name": "[concat(variables('vNet2').name,'/LinkToVNet1')]",
      "location": "[variables('vNet2').location]",
      "dependson": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('vNet1').name)]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('vNet2').name)]"
      ],
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[variables('vnet1Ref')]"
        }
      }
    }
  ],

  "outputs": {
  }
}
